--- a/index.html
+++ b/index.html
@@ -603,32 +603,32 @@
             <div class="timeline">
                 <div class="timeline-item timeline-left">
                     <div class="timeline-content">
-                        <h3 class="timeline-date">May 3, 2021</h3>
+                        <h3 class="timeline-date">March 7, 2021</h3>
                         <p>The day we first met and our journey began</p>
                     </div>
                 </div>
                 <div class="timeline-item timeline-right">
                     <div class="timeline-content">
-                        <h3 class="timeline-date">June 15, 2021</h3>
-                        <p>Our first virtual date - that movie we watched together</p>
+                        <h3 class="timeline-date">May 3, 2021</h3>
+                        <p>The first time you said "I love you"</p>
                     </div>
                 </div>
                 <div class="timeline-item timeline-left">
                     <div class="timeline-content">
-                        <h3 class="timeline-date">August 2021</h3>
-                        <p>The first time we said "I love you" to each other</p>
+                        <h3 class="timeline-date">July 27, 2021</h3>
+                        <p>I gave you a ring 💍</p>
                     </div>
                 </div>
-                <div class="timeline-item timeline-right">
+                <div class="timeline-item timeline-right"> 
+                    <div class="timeline-content">
+                        <h3 class="timeline-date">September 28, 2021</h3>
+                        <p>We celebrated your birthday together</p>
+                    </div>
+                </div>
+                <div class="timeline-item timeline-left">
                     <div class="timeline-content">
                         <h3 class="timeline-date">December 2021</h3>
-                        <p>Our first Christmas together (virtually)</p>
-                    </div>
-                </div>
-                <div class="timeline-item timeline-left">
-                    <div class="timeline-content">
-                        <h3 class="timeline-date">February 2022</h3>
-                        <p>The day we met in person for the first time</p>
+                        <p>St.Xavier church function</p>
                     </div>
                 </div>
                 <div class="timeline-item timeline-right">
