time line adjustment

--- a/index.html
+++ b/index.html
@@ -634,19 +634,19 @@
                 <div class="timeline-item timeline-right">
                     <div class="timeline-content">
                         <h3 class="timeline-date">May 3, 2022</h3>
-                        <p>Our first anniversary - that video call lasted all night</p>
+                        <p>First Year Anniversary</p>
                     </div>
                 </div>
                 <div class="timeline-item timeline-left">
                     <div class="timeline-content">
-                        <h3 class="timeline-date">October 2022</h3>
-                        <p>When we planned our future together</p>
+                        <h3 class="timeline-date">May 3, 2023</h3>
+                        <p>Second year Anniversary</p>
                     </div>
                 </div>
                 <div class="timeline-item timeline-right">
                     <div class="timeline-content">
-                        <h3 class="timeline-date">May 3, 2023</h3>
-                        <p>Two years strong and growing closer every day</p>
+                        <h3 class="timeline-date">March 7, 2023</h3>
+                        <p>Met after a long time</p>
                     </div>
                 </div>
                 <div class="timeline-item timeline-left">
@@ -847,11 +847,9 @@ Our love will always be this strong.
             <div class="surprise-box">
                 <button class="surprise-btn" id="surprise-btn-2">Surprise #2</button>
                 <div class="surprise-content" id="surprise-content-2">
-                    <h3>100 Reasons Why I Love You</h3>
-                    <p>(Here are just 10 - add your own to make it 100!)</p>
+                    <h3>Reasons Why I Love You</h3>
                     <ol style="text-align: left; margin: 20px 0; columns: 2;">
                         <li>Your smile lights up my world</li>
-                        <li>The way you listen when I need to talk</li>
                         <li>How you remember the little things</li>
                         <li>Your patience with our distance</li>
                         <li>The sound of your laugh</li>
@@ -908,7 +906,7 @@ Our love will always be this strong.
             <h2><i class="fas fa-envelope-open-text"></i> Messages From The Heart</h2>
             <p>Click each button to reveal a special message for different moments.</p>
             
-            <div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 15px; margin-top: 20px;">
+            <div style="display: grid; grid-template-columns: repeat(3, 1fr); grid-template-rows: repeat(2, 1fr); gap: 15px; margin-top: 20px;">
                 <button class="heart-btn" id="message-btn-1">When you miss me</button>
                 <button class="heart-btn" id="message-btn-2">When you need encouragement</button>
                 <button class="heart-btn" id="message-btn-3">When you're feeling down</button>
