added music playlist

--- a/index.html
+++ b/index.html
@@ -919,11 +919,11 @@
             </div>
             
             <div class="playlist">
-                <div class="song" data-song="data/Ed Sheeran - Shape of You (Lyrics).mp3">
+                <div class="song" data-song="data/Manithan - Aval Video _ Udhayanidhi _ Santhosh Narayanan.mp3">
                     <div class="song-number">1</div>
                     <div class="song-details">
-                        <div class="song-title">Perfect</div>
-                        <div class="song-artist">Ed Sheeran</div>
+                        <div class="song-title">Aval</div>
+                        <div class="song-artist">Pradeep</div>
                         <div class="song-note">The song that reminds me of you every time I hear it</div>
                     </div>
                     <div class="song-controls">
@@ -932,12 +932,12 @@
                         </button>
                     </div>
                 </div>
-                <div class="song" data-song="data/thousand_miles.mp3">
+                <div class="song" data-song="data/Imaikkaa Nodigal _ Neeyum Naanum Anbe Song _ Hiphop Tamizha _ Vijay Sethupathi, Nayanthara, Atharvaa.mp3">
                     <div class="song-number">2</div>
                     <div class="song-details">
-                        <div class="song-title">A Thousand Miles</div>
-                        <div class="song-artist">Vanessa Carlton</div>
-                        <div class="song-note">Because I would walk a thousand miles to see you</div>
+                        <div class="song-title">Neeyum Naanum Anbe</div>
+                        <div class="song-artist">Hip Hop Tamizha</div>
+                        <div class="song-note">Your Fav Song ...</div>
                     </div>
                     <div class="song-controls">
                         <button class="play-btn">
@@ -945,12 +945,12 @@
                         </button>
                     </div>
                 </div>
-                <div class="song" data-song="data/thinking_out_loud.mp3">
+                <div class="song" data-song="data/Vaa Vaa Vennila -  AAMBALA  OFFICIAL LYRIC VIDEO.mp3">
                     <div class="song-number">3</div>
                     <div class="song-details">
-                        <div class="song-title">Thinking Out Loud</div>
-                        <div class="song-artist">Ed Sheeran</div>
-                        <div class="song-note">Our first virtual dance together</div>
+                        <div class="song-title">Vaa Vaa Vennila</div>
+                        <div class="song-artist">Hip Hop Tamizha</div>
+                        <div class="song-note">A song which I dedicated to you ....</div>
                     </div>
                     <div class="song-controls">
                         <button class="play-btn">
@@ -958,12 +958,12 @@
                         </button>
                     </div>
                 </div>
-                <div class="song" data-song="data/cant_help_falling_in_love.mp3">
+                <div class="song" data-song="data/Vaaranam Aayiram - Oh Shanthi Shanthi Video _ Suriya _ Harris Jayaraj.mp3">
                     <div class="song-number">4</div>
                     <div class="song-details">
-                        <div class="song-title">Can't Help Falling In Love</div>
-                        <div class="song-artist">Elvis Presley</div>
-                        <div class="song-note">The song that played during our first meeting</div>
+                        <div class="song-title">Oh Shanthi Shanthi</div>
+                        <div class="song-artist">Harris Jayaraj</div>
+                        <div class="song-note">The song that you dedicated to me...</div>
                     </div>
                     <div class="song-controls">
                         <button class="play-btn">
@@ -971,12 +971,12 @@
                         </button>
                     </div>
                 </div>
-                <div class="song" data-song="data/photograph.mp3">
+                <div class="song" data-song="data/Azhagiye 8K_4K Video _ Kaatru Veliyidai _ A. R. Rahman _ Karthi _ Aditi Rao Hydari.mp3">
                     <div class="song-number">5</div>
                     <div class="song-details">
-                        <div class="song-title">Photograph</div>
-                        <div class="song-artist">Ed Sheeran</div>
-                        <div class="song-note">We keep our love in photographs</div>
+                        <div class="song-title">Azhagiye</div>
+                        <div class="song-artist">A.R. Rahman</div>
+                        <div class="song-note">My Proposal song for you ....</div>
                     </div>
                     <div class="song-controls">
                         <button class="play-btn">
