added one more music

--- a/index.html
+++ b/index.html
@@ -1141,6 +1141,24 @@
               </button>
             </div>
           </div>
+          <div
+          class="song"
+          data-song="data/3 - KannazhagaVideo _ Dhanush, Shruti _ Anirudh.mp3"
+        >
+          <div class="song-number">6</div>
+          <div class="song-details">
+            <div class="song-title">Kannazhaga - The Kiss of Love</div>
+            <div class="song-artist">Anirudh Ravichander</div>
+            <div class="song-note">
+              The song which reminds me of our golden days ...
+            </div>
+          </div>
+          <div class="song-controls">
+            <button class="play-btn">
+              <i class="fas fa-play"></i>
+            </button>
+          </div>
+        </div>
         </div>
       </div>
 
@@ -1884,7 +1902,7 @@
           });
         });
       });
-// Gallery modal functionality
+// Gallery modal functionality 
 document.addEventListener('DOMContentLoaded', function() {
     const galleryModal = document.getElementById('gallery-modal');
     const galleryModalImg = document.getElementById('gallery-modal-img');
