--- a/index.html
+++ b/index.html
@@ -996,25 +996,25 @@
             />
           </div>
           <div class="gallery-item">
-            <img src="/api/placeholder/400/300" alt="Video call" />
+            <img src="data/2.jpeg" alt="Bike Ride" />
           </div>
           <div class="gallery-item">
-            <img src="/api/placeholder/400/300" alt="First meeting" />
+            <img src="data/WhatsApp Image 2025-05-08 at 14.59.43.jpeg" alt="My favourite potrait" />
           </div>
           <div class="gallery-item">
-            <img src="/api/placeholder/400/300" alt="First anniversary" />
+            <img src="data/6.jpeg" alt="First Lunch" />
           </div>
           <div class="gallery-item">
-            <img src="/api/placeholder/400/300" alt="Second meeting" />
+            <img src="data/3.jpeg" alt="School Times" />
           </div>
           <div class="gallery-item">
-            <img src="/api/placeholder/400/300" alt="Special moment" />
+            <img src="data/4.jpeg" alt="Special Moment" />
           </div>
           <div class="gallery-item">
-            <img src="/api/placeholder/400/300" alt="Holiday together" />
+            <img src="data/5.jpeg" alt="Hero 😅" />
           </div>
           <div class="gallery-item">
-            <img src="/api/placeholder/400/300" alt="Third anniversary" />
+            <img src="data/1.jpeg" alt="First Picture" />
           </div>
         </div>
       </div>
