--- a/index.html
+++ b/index.html
@@ -1180,7 +1180,7 @@
             </div>
 
             <div class="quiz-question hidden" id="question-2">
-              <h3>2. What song was the first game we played together?</h3>
+              <h3>2. What was the first game we played together?</h3>
               <div class="quiz-options">
                 <div class="quiz-option">PUBG</div>
                 <div class="quiz-option" data-correct="true">Free Fire</div>
